Building URI from input string